# Voltage-noise-generator

./: CMakeLists.txt  Compare.py  LICENSE.txt  README.md  SingleFileDataSim.cpp  debug_main.cpp
Alternative mains/: multiple.cpp
Noise Spectras/: noiseSpectra.csv  noiseSpectraDebug.csv
include/: DataFrame.h  ListMath.h  ListStatistics.h  NoiseSimulation.h  Options.h  RNG.h
src/: ListMath.cpp  ListStatistics.cpp  NoiseSimulation.cpp  Options.cpp  RNG.cpp
test/: multiple.cpp
